[gd_scene load_steps=3 format=2]

[ext_resource path="res://ui/ships/FleetSelectionPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://ui/ships/FleetSelectionPopup.gd" type="Script" id=2]

[node name="FleetSelectionPopup" type="PopupPanel"]
anchor_left = 0.2
anchor_top = 0.2
anchor_right = 0.8
anchor_bottom = 0.8
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="All" type="GridContainer" parent="."]
margin_left = 4.0
margin_top = 4.0
margin_right = 650.4
margin_bottom = 396.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="All"]
margin_right = 646.0
margin_bottom = 14.0
text = "Select a Fleet"

[node name="Fleets" parent="All" instance=ExtResource( 1 )]
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 18.0
margin_right = 646.0
margin_bottom = 368.0

[node name="Buttons" type="GridContainer" parent="All"]
margin_top = 372.0
margin_right = 646.0
margin_bottom = 392.0
columns = 3

[node name="Accept" type="Button" parent="All/Buttons"]
margin_right = 56.0
margin_bottom = 20.0
text = "Accept"

[node name="Cancel" type="Button" parent="All/Buttons"]
margin_left = 60.0
margin_right = 114.0
margin_bottom = 20.0
text = "Cancel"
[connection signal="design_selected" from="All/Fleets" to="." method="_on_Fleets_design_selected"]
[connection signal="fleet_selected" from="All/Fleets" to="." method="_on_Fleets_fleet_selected"]
[connection signal="nothing_selected" from="All/Fleets" to="." method="_on_Fleets_nothing_selected"]
[connection signal="pressed" from="All/Buttons/Accept" to="." method="_on_Accept_pressed"]
[connection signal="pressed" from="All/Buttons/Cancel" to="." method="_on_Cancel_pressed"]
